--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-hello world  
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+
+    <title>Hafeef KT</title>
+  </head>
+  <body>
+    <header>
+        <section class="personal-info">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="my-photo">
+                        <div class="my-photo-wrap">
+                            <img src="images/hafeefkt.jpg">
+                        </div>                    
+                    </div>
+                    <h2>Hafeef KT</h2>
+                    <h4>Front-End Developer</h4>
+                </div>
+            </div>
+        </section>
+    </header>
+
+    <div class="container">
+        <h1>Hello, world!</h1>
+
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js" </script>
+  </body>
+</html>
